# ChunkGraph

./: .gitignore  Makefile  README.md  install-deps.sh  pyproject.toml  requirements.txt  setup.cfg
Dataset/: .gitignore
apps/: BFS.C  KCore.C  Makefile  bfs_benchmark.sh
blaze/apps/: Radii.cpp  bfs.cpp  pagerank.cpp  wcc.cpp
blaze/include/: PBEngine.h  Type.h  VertexMap.h  gettime.h
blaze/scripts/: generate_datafile.py  parse_trace_file.py  run.py
frameworks/: Makefile
frameworks/Blaze/: .gitignore  Dockerfile  Makefile  README.md
frameworks/Blaze/apps/: BellmanFord.cpp  MIS.cpp  bc.cpp  kcore.cpp
frameworks/Blaze/include/: ComputeEngine.h  ComputeWorker.h  EdgeMap.h  ScatterWorker.h  Util.h
frameworks/Blaze/scripts/: perf.sh
frameworks/CSRGraph/: .gitignore
frameworks/ChunkGraph/: .gitignore  Makefile  README.md  tutorial.md
frameworks/ChunkGraph/apps/: .gitignore  BC  BC.C  BFS  BellmanFord  BellmanFord.C  Components  IO.h  KCore  MIS  Makefile  PageRank  Radii  (+31 more)
frameworks/scripts/: blaze.sh  chunkgraph.sh  ligra_mmap.sh  perf_diskio.sh  perf_iostat.sh  simulate_low_mem_env.sh
preprocess/: .gitignore  csr2chunk.sh  split.sh  text2csr.sh
preprocess/bin2csr/: Makefile  main.cpp
preprocess/genincsr/: Makefile  main  main.cpp
preprocess/text2bin/: Makefile
scripts/: blaze.sh  run.sh
src/: gettime.h  ligra.h  plot_blktrace_data.py  plot_pidstat_data.py  run_platform_benchmark.py
src/out_of_core_graph_tools.egg-info/: PKG-INFO
src/plot/: blktrace.py  functions.py  pidstat.py  util.py
src/util/: consts.py  functions.py  logging.py
(+2 files in other folders)
