# pyproject.toml
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "out_of_core_graph_tools"
version = "0.1.0"
description = "Scripts to benchmark out-of-core graph processing tools."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib >= 3.9.0",
    "pandas >= 2.2.3"
]

[tool.setuptools.packages.find]
where = ["src"]