# setup.cfg
[metadata]
name = "out_of_core_graph_tools"
version = "0.1.0"
description = "Scripts to benchmark out-of-core graph processing tools."
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    matplotlib >= 3.9.0
    pandas >= 2.2.3
    seaborn >= 0.13.2
    openpyxl >= 3.1.5
    XlsxWriter >= 3.2.0
    scipy >= 1.14.1

[options.packages.find]
where = src